--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <title>WASD.it</title>
     <!-- angular cdn  -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js" charset="utf-8"></script>
+    <!-- angular ngCookies cdn  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-cookies.min.js"></script>
     <!-- main js -->
     <script src="/js/app.js"></script>
     <!-- main css, includes google fonts, bootstrap -->
