--- a/public/index.html
+++ b/public/index.html
@@ -17,35 +17,14 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
   </head>
 
-  <body ng-controller="MainController as main">
+  <body ng-controller="MainController as main" data-toggle="collapse" data-target=".navbar-collapse.show">
     <div class="main">
       <!-- navigation include -->
       <div ng-include="'partials/nav.html'"></div>
       <!-- Dynamically change includes -->
       <div ng-include="main.includePath"></div>
-
-      <!-- footer -->
-      <div class="footer container-fluid d-flex flex-column justify-content-center" id="footer">
-        <!-- class="footer" -->
-        <div class="social-media d-flex flex-wrap justify-content-center">
-          <i class="fab fa-github-alt"></i>
-          <i class="fab fa-steam"></i>
-          <i class="fab fa-twitch"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-youtube"></i>
-        </div>
-        <div class="copy d-flex justify-content-center">
-          <p>
-            &copy;
-            <!-- display current year -->
-            <script>
-              new Date().getFullYear()>=2018&&document.write(new Date().getFullYear());
-            </script>
-            <a href="https://github.com/samwhindleton/video-game-app" target="_blank">WASD</a>. all rights reserved.
-          </p>
-        </div>
-      </div> <!-- /.footer -->
-
+      <!-- navigation include -->
+      <div ng-include="'partials/footer.html'"></div>
     </div> <!-- /.main -->
 
     <!-- Optional Bootstrap JavaScript -->
