--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <!-- author -->
+    <meta name="author" content="">
+    <!-- description -->
+    <meta name="description" content="">
+    <!-- keywords -->
+    <meta name="keywords" content="">
     <!-- title -->
-    <title>WASD.it</title>
+    <title>WASD</title>
     <!-- angular cdn  -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js" charset="utf-8"></script>
     <!-- angular ngCookies cdn  -->
@@ -15,6 +21,8 @@
     <link rel="stylesheet" href="/css/main.css">
     <!-- font awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+    <!-- favicon -->
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
   </head>
 
   <body ng-controller="MainController as main" data-toggle="collapse" data-target=".navbar-collapse.show">
